ecmascript/parser/tests/test262-error-references/fail/5059efc702f08060.js.stderr
error: Unexpected initializer in for in/of loop
 --> $DIR/tests/test262-parser/fail/5059efc702f08060.js:1:5
  |
1 | for(var a = 0 of b);
  |     ^^^^^^^^^

